--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Cerasela Stănescu</h1>
-    <img src="../assets/images/my photo.jpg" alt="my photo" height="200"/>
+    <img src="./my photo.jpg" alt="my photo" height="200"/>
     <h2>About Me</h2>
     <p>I am a passionate and enthusiastic Junior QA Tester with the ability to pay attention to details and work within a team .
         My experience in the pharmaceutical field has given me analytical thinking, a keen attention to detail, and a structured approach to problem-solving, skills that I see as essential in software testing.
